# GrepDojo

./: .gitignore  Cargo.toml  RIPGREP_ANALYSIS.md  sample.txt  text.txt
crates/core/: Cargo.toml
crates/core/src/: lib.rs  main.rs
crates/ignore/: Cargo.toml
crates/ignore/src/: lib.rs
crates/matcher/: Cargo.toml
crates/matcher/src/: lib.rs
crates/printer/: Cargo.toml
crates/printer/src/: lib.rs
crates/searcher/: Cargo.toml
crates/searcher/src/: lib.rs
src/: main.rs
